Improve chance of rain string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="home_forecast_tab_hottest">Hottest</string>
     <string name="home_forecast_item_title">Day %1$d: %2$s</string>
     <string name="details_title">Day %1$d</string>
+    <string name="details_chance_of_rain">%1$s chance of rain</string>
     <string name="details_download_button">Download</string>
 </resources>
